# flash-screening

./: .gitignore  AGENTS.md  pyproject.toml
benchmarks/: README.md  bench_flash_screening.py  profile_flash_screening.py
src/flash_screening/: __init__.py  eager.py  flash.py
tests/: test_flash_screening.py
