[project]
name = "flash-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "torch>=2.11.0",
    "triton>=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
